tests/neg-custom-args/captures/mut-iterator5.check
-- Error: tests/neg-custom-args/captures/mut-iterator5.scala:11:23 -----------------------------------------------------
11 |    while hasNext do f(next())  // error
   |                       ^^^^
   |                       Cannot call update method next of Iterator.this
   |                       since the access is in method stupidForeach, which is not an update method.
-- Error: tests/neg-custom-args/captures/mut-iterator5.scala:16:26 -----------------------------------------------------
16 |      update def next() = Iterator.this.next() // error
   |                          ^^^^^^^^^^^^^
   |                          Read-only method sneakyForeach accesses exclusive capability `Iterator.this`;
   |                          method sneakyForeach should be declared an update method to allow this.
